# backend/cmd/api/main.go
@@ -1,3 +1,12 @@
+// @title           URL Shortener API
+// @version         1.0
+// @description     API for shortening URLs
+// @host            localhost:8080
+// @BasePath        /api/v1
+// @tag.name        URLs
+// @tag.description Operations with URLs
+// @tag.name        Health
+// @tag.description Health check
 package main
 
 import (
