# backend/internal/delivery/http/routes.go
@@ -1,12 +1,22 @@
 package http
 
 import (
+	"github.com/AbelHaro/url-shortener/backend/docs"
 	"github.com/gin-gonic/gin"
-	"github.com/swaggo/files"
+	swaggerFiles "github.com/swaggo/files"
 	"github.com/swaggo/gin-swagger"
 )
 
 func SetupRoutes(r *gin.Engine, h *URLHandler) {
+	docs.SwaggerInfo.Host = "localhost:8080"
+
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(
+		swaggerFiles.NewHandler(),
+		ginSwagger.URL("/swagger/doc.json"),
+	))
+
+	r.GET("/health", h.Health)
+
 	api := r.Group("/api/v1")
 	{
 		api.POST("/shorten", h.Create)
@@ -15,9 +25,5 @@ func SetupRoutes(r *gin.Engine, h *URLHandler) {
 		api.POST("/urls/search", h.FindByOriginalURL)
 	}
 
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
 	r.GET("/:shortURL", h.Redirect)
-
-	r.GET("/health", h.Health)
 }
